--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -79,7 +79,6 @@
     font-size: 14px;
     font-weight: 400;
     letter-spacing: 1px;
-    margin-top: 4px;
     color: #878787;
     color: #4a4a4a;
     overflow-wrap: break-word;
@@ -106,7 +105,7 @@
 
 /*------------------------------------------*/
 
-.listItems{overflow: hidden;overflow-y: scroll;height: calc(100% - 102px);width: 350px;position: fixed;}
+.listItems{overflow: hidden;overflow-y: scroll;height: calc(100% - 102px);width: 350px;position: fixed;    padding-bottom: 15px;}
 .uniqueClient{background: white;position: absolute; width: calc(100% - 350px);height: 100%;margin-left: 350px;}
 
 .infoClient{width: calc(100% - 100px); border-bottom: 1px solid #ececec;position: absolute;    padding-bottom: 5px;top: 45px;margin-left: 50px;}
@@ -130,6 +129,23 @@
 input:checked + .slider {background-color: #2dbe60; border: 1px solid #2dbe60;}
 input:focus + .slider {box-shadow: 0 0 1px #2dbe60;}
 input:checked + .slider:before {-webkit-transform: translateX(11px);-ms-transform: translateX(11px);transform: translateX(11px); border: 1px solid #fff;box-sizing: content-box;}
+
+.div_bookmark{background: white;
+    position: absolute;
+    top: 0px;
+    left: 13px;
+    width: 14px;
+    height: 19px;
+    opacity: 0.7;}
+    
+.div_i_bookmark{line-height: 21px;
+    position: absolute;
+    left: -5px;}
+.div_line_bookmark{position: absolute;
+    height: 11px;
+    top: 0px;
+    width: 100%;
+    background: white;}
 
 /* Rounded sliders */
 .slider.round {border-radius: 34px;}
@@ -280,6 +296,7 @@ overflow: hidden;overflow-y: scroll;   /* height: auto; */width: 100%;max-width:
 
 .divStatus{height: 11px;width: 11px;border-radius: 50%;margin-left: 5px;min-height: 11px;}
 .sOK{background-color: #0f9d58;}
+.sOK_color{color: #0f9d58;}
 .sPendiente{background-color: #9e9e9e;}
 .sEliminado{background-color: red;}
 .ctoolbar{
@@ -1030,17 +1047,51 @@ tr:hover{
 
 .st_div_cli{position: absolute;
     top: 7px;}
-    
-.sYS{    background-color: #e64a89;}
+   
 
-.visible{display: block;}
+
+
+.sYS{background-color: #e64a89;}
+.sYS_color{color:#e64a89}
+
+
 .fadeIn{
 	visibility:visible;
 	opacity: 1;
 }
    
 
+/*Cargandooooo------------------------------------------------------*/
+.loader {
+	display: none;
+	width: 35px;
+    height: 10px;
+    position: absolute;
+    left: 50%;
+    bottom: 1px;
+    margin: 0px -20px;
+}
+.loader div {
+	width: 5px;
+  height: 5px;
+	background: #87877E;
+  border-radius: 50%;
+  position: absolute; 
 
+}
+#d1 { animation: animate 2s linear infinite;}
+#d2 { animation: animate 2s linear infinite -.4s; }
+#d3 {animation: animate 2s linear infinite -.8s; }
+#d4 { animation: animate 2s linear infinite -1.2s; } 
+#d5 { animation: animate 2s linear infinite -1.6s; }
+@-webkit-keyframes animate {
+  0% { left: 35px; top:0}
+  80% { left: 0; top:0;}
+  85% { left: 0; top: -7px; }
+  90% {  }
+  95% { left: 35px; top: -7px;}
+  100% { left: 35px; top:0; }
+}
 
-
+.visible{display: block;}
 
