--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -522,9 +522,10 @@ textarea{color: #878787;}
     height: 12px;
     width: 100%;
 }
-.delete_client{cursor: pointer;
+.delete_client , .filter_client{cursor: pointer;
     margin-left: 4px;
-    position: absolute;
+    /*position: absolute;*/
+    float:left;
     height: 27px;
     width: 27px;
     padding-left: 2px;
@@ -1081,11 +1082,11 @@ tr:hover{
   position: absolute; 
 
 }
-#d1 { animation: animate 2s linear infinite;}
-#d2 { animation: animate 2s linear infinite -.4s; }
-#d3 {animation: animate 2s linear infinite -.8s; }
-#d4 { animation: animate 2s linear infinite -1.2s; } 
-#d5 { animation: animate 2s linear infinite -1.6s; }
+.l_d1 { animation: animate 2s linear infinite;}
+.l_d2 { animation: animate 2s linear infinite -.4s; }
+.l_d3 {animation: animate 2s linear infinite -.8s; }
+.l_d4 { animation: animate 2s linear infinite -1.2s; } 
+.l_d5 { animation: animate 2s linear infinite -1.6s; }
 @-webkit-keyframes animate {
   0% { left: 35px; top:0}
   80% { left: 0; top:0;}
@@ -1095,9 +1096,17 @@ tr:hover{
   100% { left: 35px; top:0; }
 }
 
+.spanCabecera{float: left; padding: 0px!important; }
+.arrowOrdenar{    font-size: 15px;
+    line-height: 14px;
+    /* transform: rotate(90deg); */
+    float: left;
+    margin-top: 7px;
+    margin-left: 8px;
+    color: #bfbfbf;}
+.cursor_pointer{cursor: pointer}
+.txt_center_mg_0{text-align: center;margin: 0}
+.blockAll{display: none;background: transparent;width: 100%;height: 100%;position: absolute;z-index: 10000;}
 .visible{display: block;}
-.fadeIn{
-	visibility:visible;
-	opacity: 1;
-}
+.fadeIn{visibility:visible;opacity: 1;}
 
