--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1098,6 +1098,7 @@ tr:hover{
 
 .spanCabecera{float: left; padding: 0px!important; }
 .arrowOrdenar{    font-size: 15px;
+	display: none;
     line-height: 14px;
     /* transform: rotate(90deg); */
     float: left;
@@ -1107,6 +1108,69 @@ tr:hover{
 .cursor_pointer{cursor: pointer}
 .txt_center_mg_0{text-align: center;margin: 0}
 .blockAll{display: none;background: transparent;width: 100%;height: 100%;position: absolute;z-index: 10000;}
+.div_filtro{
+	display: none;
+	position: absolute;
+    width: 260px;
+    height: 285px;
+    background: white;
+    border: 1px solid #ececec;
+    border-radius: 4px;}
+.txt_opciones_filter{    color: #878787;
+    font-size: 12px;padding: 2px 15px;}
+.chkbx_filter{float: left;
+    width: 10px;
+    margin-top: 2px;
+    margin-left: 30px;
+        height: 15px;}
+.title_filter{ 
+    height: 60px;
+    padding-top: 18px;
+    border-bottom: 1px solid #ececec;
+    background: #1090f7;
+    color: white;
+    padding-left: 25px;
+    font-size: 18px;
+    border-radius: 4px 4px 0px 0px;
+    /* line-height: 63px; */}
+.i_title_filter{    float: right;
+    font-size: 26px;
+    margin-right: 14px;}
+.section_filter{    padding: 8px 25px;
+    color: #1090f7;
+    padding-bottom: 2px;
+    font-size: 13px;}
+
+.btn_filter{    float: right;
+    width: 80px;
+    text-transform: uppercase;
+    color: #1090f7;
+    font-size: 14px;
+    font-weight: bold;}
+
+.div_group_filter{float: left;
+    padding-top: 4px;}
+.item_filter_group{
+	float: left;
+    background: #4285f4;
+    color: white;
+    font-size: 14px;
+    height: 20px;
+    padding-left: 10px;
+    padding-right: 25px;
+    border-radius: 50px;
+    margin-left: 10px;
+    position: relative;
+    line-height: 19px;
+        cursor: pointer;
+}   
+.delete_item_filter{  
+    position: absolute;
+    top: 0px;
+    right: 3px;
+    top: -2px;}
+.btn_detele_item_filter{fill: #fff;}
+
 .visible{display: block;}
 .fadeIn{visibility:visible;opacity: 1;}
 
