--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -255,7 +255,7 @@ overflow: hidden;overflow-y: scroll;   /* height: auto; */width: 100%;max-width:
 .cAnchor{width: 12%;}
 .cWeb{width: 18%;}
 .cTipo{ width: 50px; min-width: 50px;   text-align: center;}
-.cCateg{width: 210px;}
+.cCateg{width: 210px;    min-width: 210px;}
 .pa{position: absolute;background: white;    z-index: 1;    top: 0;}
 .noti{border: solid;    font-family: 'Lato', sans-serif;    border-width: 1px;    position: absolute;    right: 25px;    top: 36px;    font-size: 11px;    border-color: #ea4335;    color: #ea4335;    text-align: center;    border-radius: 50px;    padding: 1px 6px;background: white;}  
 .notiPos{    border-color: white;
@@ -1197,6 +1197,15 @@ tr:hover{
     padding-left: 50px;
     padding-top: 31px;
     padding-bottom: 20px;}
+
+.table_fixed{
+	top: 31px;
+    table-layout: fixed;
+    z-index: 2;
+    background: white;
+}
+.opacity_0{opacity: 0}
+.bkgd_white{background: white;}
 
 .visible{display: block;}
 .fadeIn{visibility:visible;opacity: 1;}
