--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1171,7 +1171,8 @@ tr:hover{
     font-size: 14px;
     font-weight: bold;
     bottom: 10px;
-    right: 10px;}
+    right: 10px;
+    cursor: pointer}
 
 .div_group_filter{float: left;
     padding-top: 4px;}
