--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1316,7 +1316,7 @@ tr:hover{
     width: 100%;
 }
 .mgn_top{margin-top: 3px;}
-
+.wdth_110{    width: 110px;}
 
 .empleadoDone, .empleadoDefault{display: none}
 
