--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -517,6 +517,7 @@ textarea{color: #878787;}
 .cCIdioma input{ text-align: center;}
 .cCUser{width: 75px;min-width: 75px;}
 .cCBlog{    width: 55px;}
+.cCPaid{    width: 55px;}
 .cFollow{text-align: center;width: 45px;min-width: 45px;}
 .cNoFollow{text-align: center;width: 45px;min-width: 45px;}
 .cFollow input{text-align: center;}
