--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -626,7 +626,7 @@ input[type=number]::-webkit-outer-spin-button {
 .panelConfirmacion{
 	display: none;
 	position: absolute;
-    z-index: 1;
+    z-index: 99;
     width: 100%;
     height: 100%;
     background: white;
@@ -653,6 +653,7 @@ input[type=number]::-webkit-outer-spin-button {
 .botonesConfirmacion{
 	text-align: center;
     margin-top: 80px;
+    margin-bottom: 50px;
 }
 .btnsConfi{
     cursor: pointer;
